# parallelAlgo-task2

./: CMakeLists.txt  README.md  bfs.h  main.cpp
parallelAlgo-task2/: bfs.h  graph.h  main.cpp
